--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -132,26 +132,62 @@
             } else {
                 if (isiOS){
                     //ios
-                    setTimeout(function () {
-                        alert('跳转到应用');
-                        window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
-                        return;
-                    },2000);
-
-                    setTimeout(function () {
-                        alert('跳转到appstore');
-                        window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
-                        return;
-                    },2000);
+                    var downLoadUrl = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+                    var jumpUrl = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
+                    openIOSApp(downLoadUrl,jumpUrl);
                 }
 
                 if (isAndroid) {
                     //android
-                    alert('isAndroid');
-
+                    var downLoadUrl = "http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning";
+                    var jumpUrl = "";
                 }
             }
         });
+
+        function openIOSApp(downloadUrl,jumpUrl) {
+            var timeout, t = 1000, hasApp = true;
+            var openScript = setTimeout(function () {
+                if (!hasApp) {
+                    alert('跳转到下载页面');
+                    window.location.href = downloadUrl;
+                } else {
+                    alert('跳转到应用内部');
+                    window.location.href = jumpUrl;
+                }
+            }, 3000)
+
+            var t1 = Date.now();
+            timeout = setTimeout(function () {
+                var t2 = Date.now();
+                if (!t1 || t2 - t1 < t + 100) {
+                    hasApp = false;
+                }
+            }, t);
+        }
+
+        function openAndroidApp(downloadUrl,jumpUrl) {
+            var timeout, t = 1000, hasApp = true;
+            var openScript = setTimeout(function () {
+                if (!hasApp) {
+                    var durl = "http:www.baidu.com";
+                    window.location.href=durl;
+                }
+                document.body.removeChild(ifr);
+            }, 2000)
+
+            var t1 = Date.now();
+            var ifr = document.createElement("iframe");
+            ifr.setAttribute('src', url);
+            ifr.setAttribute('style', 'display:none');
+            document.body.appendChild(ifr);
+            timeout = setTimeout(function () {
+                var t2 = Date.now();
+                if (!t1 || t2 - t1 < t + 100) {
+                    hasApp = false;
+                }
+            }, t);
+        }
 
         //打开应用
         // $('a').click(function () {
