--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -146,21 +146,15 @@
         });
 
         function openIOSApp(downloadUrl,jumpUrl) {
-            var timeout, t = 1000, hasApp = true;
-            var openScript = setTimeout(function () {
-                if (!hasApp) {
-                    window.location.href = downloadUrl;
-                }
-            }, 2000)
-
-            var t1 = Date.now();
+            var hasApp = true;
             window.location.href = jumpUrl;
-            timeout = setTimeout(function () {
-                var t2 = Date.now();
-                if (!t1 || t2 - t1 < t + 100) {
-                    hasApp = false;
-                }
-            }, t);
+            window.onbeforeunload = function() {
+                alert("Leave this page?");
+                hasApp = false;
+            }
+            if (hasApp) {
+                window.location.href = downloadUrl;
+            }
         }
 
         function openAndroidApp(downloadUrl,jumpUrl) {
