--- a/sharehomework/jumpapp.html
+++ b/sharehomework/jumpapp.html
@@ -12,9 +12,9 @@
 document.getElementById('openApp').onclick = function(e){
     if(navigator.userAgent.match(/(iPhone|iPod|iPad);?/i))
     {
-        window.location.href = "com.baidu.tieba://";//ios app协议
+        window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";//ios app协议
         window.setTimeout(function() {
-            window.location.href = "https://itunes.apple.com/cn/app/id477927812";
+            window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
         }, 2000)
     }
     if(navigator.userAgent.match(/android/i))
