--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -163,18 +163,19 @@
             var timeout, t = 1000, hasApp = true;
             var openScript = setTimeout(function () {
                 if (!hasApp) {
-                    alert("安卓移动端");
-                    window.location.href=downloadUrl;
+                    alert("安卓移动端2");
+                    $('a').attr('href',downloadUrl);
                 }
-                document.body.removeChild(ifr);
+                // document.body.removeChild(ifr);
             }, 2000)
 
             var t1 = Date.now();
-            alert("安卓移动端");
-            var ifr = document.createElement("iframe");
-            ifr.setAttribute('src', jumpUrl);
-            ifr.setAttribute('style', 'display:none');
-            document.body.appendChild(ifr);
+            alert("安卓移动端1");
+            // var ifr = document.createElement("iframe");
+            // ifr.setAttribute('src', jumpUrl);
+            // ifr.setAttribute('style', 'display:none');
+            // document.body.appendChild(ifr);
+            $('a').attr('href',jumpUrl);
             timeout = setTimeout(function () {
                 var t2 = Date.now();
                 if (!t1 || t2 - t1 < t + 100) {
