--- a/sharehomework/jumpapp.html
+++ b/sharehomework/jumpapp.html
@@ -5,7 +5,8 @@
     <title>跳到新App</title>
 </head>
 <body>
-    <a href="javascript:;" id="openApp">贴吧客户端</a>
+    <!--<a href="javascript:;" id="openApp">贴吧客户端</a>-->
+    <a href="zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList">跳到APP页面</a>
 </body>
 <script type="text/javascript">
 document.getElementById('openApp').onclick = function(e){
