--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -139,24 +139,48 @@
 
                 if (isAndroid) {
                     //android
-                    var timeout, t = 1000, hasApp = true;
-                    var openScript = setTimeout(function () {
-                        if (!hasApp) {
-                            alert('store');
-                            $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
-                        }
-                    }, 2000)
-
-                    var t1 = Date.now();
-                    alert('app');
-                    $('a').attr('href','zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList');
-                    timeout = setTimeout(function () {
-                        var t2 = Date.now();
-                        if (!t1 || t2 - t1 < t + 100) {
-                            alert('store123');
-                            hasApp = false;
-                        }
-                    }, t);
+                    var jumpUrl = "zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList";
+                    var d = new Date();
+                    var t0 = d.getTime();
+                    if(openApp(jumpUrl)){
+                        openApp(jumpUrl);
+                    } else {
+                        //由于打开需要1～2秒，利用这个时间差来处理－－打开app后，返回h5页面会出现页面变成app下载页面，影响用户体验
+                        var delay = setInterval(function(){
+                            var d = new Date();
+                            var t1 = d.getTime();
+                            if( t1-t0<3000 && t1-t0>2000){
+                                alert('请下载APP');
+                                $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+                            }
+                            if(t1-t0>=3000){
+                                clearInterval(delay);
+                            }
+                        },1000);
+                    }
+                    // setTimeout(function() {
+                    //     window.location.href = "http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning";
+                    // }, 3000);
+                    //
+                    //
+                    // var timeout, t = 1000, hasApp = true;
+                    // var openScript = setTimeout(function () {
+                    //     if (!hasApp) {
+                    //         alert('store');
+                    //         $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+                    //     }
+                    // }, 2000)
+                    //
+                    // alert('app');
+                    // $('a').attr('href','zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList');
+                    // timeout = setTimeout(function () {
+                    //     var t2 = Date.now();
+                    //     if (!t1 || t2 - t1 < t + 100) {
+                    //         alert('store123');
+                    //         hasApp = false;
+                    //         openScript;
+                    //     }
+                    // }, t);
                 }
             }
         });
@@ -171,6 +195,18 @@
             if (hasApp) {
                 window.location.href = downloadUrl;
             }
+        }
+
+        function openApp(src) {
+            // 通过iframe的方式试图打开APP，如果能正常打开，会直接切换到APP，并自动阻止a标签的默认行为
+            // 否则打开a标签的href链接
+            var ifr = document.createElement('iframe');
+            ifr.src = src;
+            ifr.style.display = 'none';
+            document.body.appendChild(ifr);
+            window.setTimeout(function(){
+                document.body.removeChild(ifr);
+            },2000);
         }
 
         // function openAndroidApp(downloadUrl,jumpUrl) {
