--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -142,6 +142,7 @@
                     var jumpUrl = "zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList";
                     var d = new Date();
                     var t0 = d.getTime();
+                    alert(openApp(jumpUrl));
                     if(openApp(jumpUrl)){
                         openApp(jumpUrl);
                     } else {
