--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -178,14 +178,14 @@
         function openApp(src) {
             // 通过iframe的方式试图打开APP，如果能正常打开，会直接切换到APP，并自动阻止a标签的默认行为
             // 否则打开a标签的href链接
-            alert(true);
+            alert("true");
             var ifr = document.createElement('iframe');
             ifr.src = 'zhixueapp://';
             ifr.style.display = 'none';
             document.body.appendChild(ifr);
             window.setTimeout(function(){
                 document.body.removeChild(ifr);
-                alert(false);
+                alert("false");
                 return false;
             },2000);
         }
