--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -180,7 +180,7 @@
             // 否则打开a标签的href链接
             alert("true");
             var ifr = document.createElement('iframe');
-            ifr.src = 'zhixueapp://';
+            ifr.src = 'weixin://';
             ifr.style.display = 'none';
             document.body.appendChild(ifr);
             window.setTimeout(function(){
