--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -142,8 +142,8 @@
                     var jumpUrl = "zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList";
                     var d = new Date();
                     var t0 = d.getTime();
-                    if(openApp(jumpUrl)){
-                        openApp(jumpUrl);
+                    if(openApp(jumpUrl,t0)){
+                        openApp(jumpUrl,t0);
                     } else {
                         //由于打开需要1～2秒，利用这个时间差来处理－－打开app后，返回h5页面会出现页面变成app下载页面，影响用户体验
                         var delay = setInterval(function(){
@@ -157,21 +157,43 @@
                             }
                         },1000);
                     }
+                    // var ifr = document.createElement('iframe');
+                    // ifr.src = 'weixin://';
+                    // ifr.style.display = 'none';
+                    // document.body.appendChild(ifr);
+                    // window.setTimeout(function(){
+                    //     document.body.removeChild(ifr);
+                    // },2000);
+
+
                 }
             }
         });
 
-        function openApp(src) {
+        function openApp(src,t0) {
             // 通过iframe的方式试图打开APP，如果能正常打开，会直接切换到APP，并自动阻止a标签的默认行为
             // 否则打开a标签的href链接
             var ifr = document.createElement('iframe');
             ifr.src = 'weixin://';
             ifr.style.display = 'none';
             document.body.appendChild(ifr);
-            window.setTimeout(function(){
-                document.body.removeChild(ifr);
-                alert('false');
-            },2000);
+            // var delay = setInterval(function(){
+            //     var d = new Date();
+            //     var t1 = d.getTime();
+            //     if( t1-t0<3000 && t1-t0>2000){
+            //         $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+            //     }
+            //     if(t1-t0>=3000){
+            //         clearInterval(delay);
+            //     }
+            // },1000);
+            //
+            //
+            //
+            // window.setTimeout(function(){
+            //
+            //     alert('false');
+            // },2000);
         }
     });
 </script>
