--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -118,6 +118,15 @@
 <script src="js/index.js"></script>
 <script type="text/javascript">
     $(function () {
+        //监听程序时候进入后台
+        document.addEventListener("visibilitychange",function(){
+            if(document.visibilityState=="visible"){
+                //进入页面
+            }
+            if(document.visibilityState=="hidden"){
+                //进入后台
+            }
+        })
         //打开应用
         $('a').click(function () {
             var u = navigator.userAgent, app = navigator.appVersion;
@@ -139,33 +148,26 @@
 
                 if (isAndroid) {
                     //android
-                    var jumpUrl = "zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList";
-                    var d = new Date();
-                    var t0 = d.getTime();
-                    if(openApp(jumpUrl,t0)){
-                        openApp(jumpUrl,t0);
-                    } else {
-                        //由于打开需要1～2秒，利用这个时间差来处理－－打开app后，返回h5页面会出现页面变成app下载页面，影响用户体验
-                        var delay = setInterval(function(){
-                            var d = new Date();
-                            var t1 = d.getTime();
-                            if( t1-t0<3000 && t1-t0>2000){
-                                $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
-                            }
-                            if(t1-t0>=3000){
-                                clearInterval(delay);
-                            }
-                        },1000);
-                    }
-                    // var ifr = document.createElement('iframe');
-                    // ifr.src = 'weixin://';
-                    // ifr.style.display = 'none';
-                    // document.body.appendChild(ifr);
-                    // window.setTimeout(function(){
-                    //     document.body.removeChild(ifr);
-                    // },2000);
 
-
+                    window.location.href = "weixin://";
+                    // var jumpUrl = "zhixueapp://com.iflytek.elpmobile.smartlearning/open?destination=homeworkList";
+                    // var d = new Date();
+                    // var t0 = d.getTime();
+                    // if(openApp(jumpUrl,t0)){
+                    //     openApp(jumpUrl,t0);
+                    // } else {
+                    //     //由于打开需要1～2秒，利用这个时间差来处理－－打开app后，返回h5页面会出现页面变成app下载页面，影响用户体验
+                    //     var delay = setInterval(function(){
+                    //         var d = new Date();
+                    //         var t1 = d.getTime();
+                    //         if( t1-t0<3000 && t1-t0>2000){
+                    //             $('a').attr('href', 'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+                    //         }
+                    //         if(t1-t0>=3000){
+                    //             clearInterval(delay);
+                    //         }
+                    //     },1000);
+                    // }
                 }
             }
         });
