--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -92,7 +92,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第九步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第九返回法国步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
