--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -121,6 +121,12 @@
         //监听程序时候进入后台
         document.addEventListener("visibilitychange",function(){
             if(document.visibilityState=="visible"){
+                alert('进入页面');
+                $('a').attr('href', '');
+                window.location.href = "";
+            }
+            if(document.visibilityState=="hidden"){
+                alert('离开页面');
                 $('a').attr('href', '');
                 window.location.href = "";
             }
