--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -121,14 +121,10 @@
         //监听程序时候进入后台
         document.addEventListener("visibilitychange",function(){
             if(document.visibilityState=="visible"){
-                alert('进入页面');
-                $('a').attr('href', '');
-                window.location.href = "";
+                window.location.reload(true);
             }
             if(document.visibilityState=="hidden"){
-                alert('离开页面');
-                $('a').attr('href', '');
-                window.location.href = "";
+                window.location.reload(true);
             }
         })
         //打开应用
