--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="我是关键字" />
     <meta itemprop="name" content="练习通知">
     <meta itemprop="description" content="练习已发布成功,请前往智学APP作答">
-    <meta itemprop="image" content="http://mhwtest.zhixue.com/mhwpublic/sharehomeworkinfo/image/icon_image@2x.png">
+    <meta itemprop="image" content="./image/icon_image@2x.png">
     <meta name="description" content="练习已发布成功,请前往智学APP作答" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -17,7 +17,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,minimal-ui"/>
     <title>练习通知</title>
     <link rel="icon" href="data:;base64,="/>
-    <script src="js/base.js"></script>
     <script src="js/jquery.js"></script>
     <style>
         [v-cloak] {
@@ -25,12 +24,39 @@
         }
     </style>
     <link type="text/css" rel="styleSheet" href="./css/index.css" />
+    <!--<script type="text/javascript">-->
+    <!--//埋点SDK集成-->
+    <!--(function (w, d, s) {-->
+    <!--var l = 'IFlyCollector', f = d.getElementsByTagName(s)[0], j = d.crea-->
+    <!--teElement(s), w = window;-->
+    <!--w[l] = {}; var c = w[l]; c._o = function (a) { return function () {-->
+    <!--(c._e = c._e || []).push([a, arguments]) } };-->
+    <!--var e = ['init', 'onEvent', 'onError', 'bindUser', 'updateCustomConfi-->
+    <!--g'];-->
+    <!--for (var i = 0; i < e.length; i++) { c[e[i]] = c._o.call(null, e[i])-->
+    <!--}-->
+    <!--j.async = true; j.src = 'http://logconf.iflytek.com/entry.js'; f.pare-->
+    <!--ntNode.insertBefore(j, f);-->
+    <!--})(window, document, 'script');-->
+
+    <!--//埋点接口初始化-->
+    <!--IFlyCollector.init({-->
+    <!--appId: "zx_web_sdk",-->
+    <!--host: ".",-->
+    <!--debug: true,-->
+    <!--spa: false,-->
+    <!--configUrl: "http://logconf.iflytek.com",-->
+    <!--collectUrl: "https://ebglog.iflytek.com",-->
+    <!--gpsGetSwitch: false,-->
+    <!--source:"ebg"-->
+    <!--})-->
+    <!--</script>-->
 </head>
 <body>
 <!--网页中紧接着<body>加一个-->
 <div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
     <!--图片宽高大于400px，最好是一个正方形的图片-->
-    <img src="http://mhwtest.zhixue.com/mhwpublic/sharehomeworkinfo/image/icon_image@2x.png" width='700'>
+    <img src="./image/icon_image@2x.png" width='700'>
 </div>
 <div class="wrap" id="app" v-cloak>
     <img id="share_leftImage" src="./image/share_leftImg@2x.png" alt=""/>
@@ -92,13 +118,14 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第三事故的地方是个步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第三步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">请在智学网APP内完成练习</span>
+            <!--v-on:click="openApp"-->
             <a><button id="bottom_btn">打开应用</button></a>
         </div>
     </div>
@@ -116,43 +143,41 @@
 </div>
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
-<script type="text/javascript">
-    $(function () {
-        //打开应用
-        var appMsg = navigator.userAgent;
-        alert(appMsg);
-        $('a').click(function () {
-            var u = navigator.userAgent, app = navigator.appVersion;
-            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
-            var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-            if(u.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
-                document.body.addEventListener('touchmove', function (e) {
-                    e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
-                }, {passive: false});
-                $('#coverBackview').css('display','block');
-            } else {
-                if (isiOS){
-                    //ios
-                    window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
-                    setTimeout(function () {
-                        window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
-                    },10);
+<script >
+$(function () {
+//打开应用
+$('a').click(function () {
+var u = navigator.userAgent, app = navigator.appVersion;
+var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
+var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+if(u.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
+document.body.addEventListener('touchmove', function (e) {
+e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+}, {passive: false});
+$('#coverBackview').css('display','block');
+} else {
+if (isiOS){
+//ios
+window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
+setTimeout(function () {
+window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+},10);
 
-                }
-                if (isAndroid) {
-                    //android
-                    var ifr = document.createElement('iframe');
-                    ifr.src = "zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=";
-                    ifr.style.display = 'none';
-                    document.body.appendChild(ifr);
-                    setTimeout(function () {
-                        document.body.removeChild(ifr);
-                        $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
-                    },10);
-                }
-            }
-        });
-    });
+}
+if (isAndroid) {
+//android
+var ifr = document.createElement('iframe');
+ifr.src = "zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=";
+ifr.style.display = 'none';
+document.body.appendChild(ifr);
+setTimeout(function () {
+document.body.removeChild(ifr);
+$('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+},10);
+}
+}
+});
+});
 </script>
 </body>
 </html>
